[package]
name = "api-shooter-cli"
version = "0.1.0"
edition = "2021"
description = "A fun action game to learn REST API concepts"
license = "MIT"
keywords = ["game", "action", "rest", "api", "educational"]
categories = ["games"]

[lib]
name = "api_shooter_cli"
path = "src/lib.rs"

[[bin]]
name = "api-shooter"
path = "src/main.rs"

[dependencies]
rand = "0.8"
macroquad = "0.4"
