[package]
name = "api-shooter-game"
version = "0.1.0"
edition = "2021"
description = "Shooting game with REST API concepts"
license = "MIT"
keywords = ["game"]
categories = ["games"]

[lib]
name = "api_shooter_game"
path = "src/lib.rs"

[[bin]]
name = "api-shooter"
path = "src/main.rs"

[dependencies]
rand = "0.8"
macroquad = "0.4"
